--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ gen
 workspace.xml
 usage.statistics.xml
 tasks.xml
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
